@@ -91,7 +91,9 @@ version 25-git (????-??-??):
   - improvement: allow display message body with wildcards for particular message [ravvar]
   - improvement: added different content type of messages based on mime types [chilan/ravvar]
   - enhancement: lms-notify.php supports userpanel and userpanel urgent message emitions [chilan]
-  - enhancement: message file attachement are stored in message history [chilan/ravvar]
+  - enhancement: message file attachement are stored in message history
+    (introduced sendinvoices.message_attachments configuration variable which enables/disables
+    attachment storage for send invoice messages; 'false' by default) [chilan/ravvar]
 
 version 24.0 (2019-05-16):
 
